<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="LoadCellParameterizationSteps" Id="{486860f9-ecfa-032a-01cb-e843f1b6f906}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE LoadCellParameterizationSteps : (
    resetToFactorySettings := 0,
    setRatedOutput,
    setNominalLoad,
    setNominalOffset,
    setScalingFactor,
    Done
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>